// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextIcon Should render icon acs 1`] = `<CloudSecurityIcon />`;

exports[`ContextIcon Should render icon ansible 1`] = `<AnsibleTowerIcon />`;

exports[`ContextIcon Should render icon canceled 1`] = `<UnknownIcon />`;

exports[`ContextIcon Should render icon cancelled 1`] = `<UnknownIcon />`;

exports[`ContextIcon Should render icon completed 1`] = `<UnknownIcon />`;

exports[`ContextIcon Should render icon created 1`] = `<UnknownIcon />`;

exports[`ContextIcon Should render icon download 1`] = `<DownloadIcon />`;

exports[`ContextIcon Should render icon error 1`] = `<UnknownIcon />`;

exports[`ContextIcon Should render icon failed 1`] = `
<ExclamationCircleIcon
  color="#c9190b"
/>
`;

exports[`ContextIcon Should render icon idCard 1`] = `
<IdCardIcon
  color="#151515"
/>
`;

exports[`ContextIcon Should render icon info 1`] = `<InfoCircleIcon />`;

exports[`ContextIcon Should render icon network 1`] = `<PficonNetworkRangeIcon />`;

exports[`ContextIcon Should render icon off 1`] = `<OffIcon />`;

exports[`ContextIcon Should render icon openshift 1`] = `<OpenshiftIcon />`;

exports[`ContextIcon Should render icon paused 1`] = `<UnknownIcon />`;

exports[`ContextIcon Should render icon pencil 1`] = `<PencilAltIcon />`;

exports[`ContextIcon Should render icon pending 1`] = `
<Spinner
  size="sm"
/>
`;

exports[`ContextIcon Should render icon running 1`] = `<UnknownIcon />`;

exports[`ContextIcon Should render icon satellite 1`] = `<PficonSatelliteIcon />`;

exports[`ContextIcon Should render icon scans 1`] = `<ClipboardCheckIcon />`;

exports[`ContextIcon Should render icon sources 1`] = `<CrosshairsIcon />`;

exports[`ContextIcon Should render icon success 1`] = `
<CheckCircleIcon
  color="#3e8635"
/>
`;

exports[`ContextIcon Should render icon trash 1`] = `<TrashIcon />`;

exports[`ContextIcon Should render icon unknown 1`] = `<UnknownIcon />`;

exports[`ContextIcon Should render icon unreachable 1`] = `
<DisconnectedIcon
  color="#c9190b"
/>
`;

exports[`ContextIcon Should render icon user 1`] = `<UserIcon />`;

exports[`ContextIcon Should render icon vcenter 1`] = `<PficonVcenterIcon />`;

exports[`ContextIcon Should render icon warning 1`] = `
<ExclamationTriangleIcon
  color="#f0ab00"
/>
`;
